# lattitude

./: .gitignore  Cargo.toml
effigy/: Cargo.toml
effigy/src/: color.rs  image.rs  pixelfield.rs
engine/: Cargo.toml
engine/src/: context.rs  controller.rs  global_configuration.rs  integration.rs  lib.rs  page.rs
engine/src/configuration/: directory.rs  mod.rs
engine/src/display/: bmp.rs  mod.rs
engine/src/engine/: integrations.rs  mod.rs
engine/src/font/: mod.rs
engine/src/model/: mod.rs
engine/src/view/: canvas.rs  mod.rs  pixels.rs  rotate.rs  scale.rs  text.rs  trim.rs
it8951/: Cargo.toml
it8951/src/: lib.rs  pixel_serializer.rs
lattitude/: Cargo.toml
lattitude/src/: main.rs
lattitude/src/art/: mod.rs
lattitude/src/cli/: calibrate.rs  clear.rs  mod.rs  run.rs  splash.rs  unbox.rs
lattitude/src/controller/: clock.rs  mod.rs
lattitude/src/coordinator/: mod.rs
lattitude/src/display/: ascii.rs  bmp.rs  epd.rs  epd10_3.rs  mod.rs
lattitude/src/font/: mod.rs
lattitude/src/integration/: clock.rs  mod.rs
lattitude/src/integration/accuweather/: api.rs  mod.rs
lattitude/src/integration/accuweather/daily/: api.rs  mod.rs
lattitude/src/integration/accuweather/hourly/: api.rs  mod.rs
lattitude/src/integration/birdnet/: api.rs  detections.rs  mod.rs
lattitude/src/page/: main.rs  mod.rs  splash.rs  unbox.rs
lattitude/src/state/: mod.rs
lattitude/src/system/: mod.rs
lattitude/src/view/: mod.rs  text.rs
layout/: Cargo.toml
layout/src/: lib.rs
layout/src/canvas/: mod.rs
layout/src/controller/: mod.rs  periodic.rs
layout/src/model/: mod.rs
layout/src/view/: mod.rs
liein/: Cargo.toml
liein/src/: fuck.rs
liein/src/canvas/: mod.rs
liein/src/controller/: periodic.rs
liein/src/model/: mod.rs
liein/src/view/: mod.rs
pixelfield/: Cargo.toml
pixelfield/src/: color.rs  image.rs  lib.rs  pixelfield.rs
