[package]
name = "layout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixelfield = { path = "../pixelfield" }
tokio = {  version = "1.35.1", features = ["full"] }
actix = { version = "0.13.1", features = ["macros"] }
serde = "1.0.195"
chrono = "0.4.31"
num-traits = "0.2.17"
